--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ EMAIL_PORT=587
 EMAIL_SECURE=false
 EMAIL_USER=mahijareddy872@gmail.com
 EMAIL_PASSWORD=qmpu dizx ejcv zpzd
-EMAIL_FROM=mahijareddy872
+EMAIL_FROM=mahijareddy872@gmail.com
 MONGODB_URI=mongodb+srv://mahijareddy872:kX66MSUKj73.2rs@cluster0.l8p5z.mongodb.net/digitalpro?retryWrites=true&w=majority
 MONGODB_DB_NAME=digitalpro
